# Agente_pesquisa

./: .gitignore  AGENTS.md  README.md  institutions.json  pyproject.toml  requirements.txt
app/: __init__.py  constants.py  deduper.py  emailer.py  feedback.py  instagram_capture.py  io_utils.py  llm_client.py  models.py  normalizers.py  orchestrator.py  quality_gate.py  reporter.py  runtime_db.py  scoring.py  spa_capture.py  validators.py
automations/: README.md  daily_cycle.cron.example  daily_cycle.ps1
config/: agent_models.json  email_settings.json  historical_seeds.json  institutions.json  report_settings.json  routing_rules.json  scoring_rules.json
docs/: runbook.md  security.md  system_overview.md  troubleshooting.md
openclaw/: README.md  install_user_config.ps1  openclaw.json
prompts/: report_template.md  validation_template.md
schemas/: campaign.schema.json  candidate.schema.json  handoff.schema.json  observation.schema.json  report.schema.json
scripts/: _check_dead_letters.py  approve_send.py  backfill_observations.py  bootstrap_project.py  confirm_campaign.py  dedupe_campaigns.py  export_html_report.py  generate_report.py  merge_campaigns.py  normalize_campaigns.py  replay_failed.py  retry_failed_jobs.py  review_queue.py  run_cycle.py  run_manual_cycle.py  run_real_full.py  run_telegram_bot.py  send_email.py  validate_campaigns.py
tests/: test_autonomy_runtime.py  test_deduper.py  test_discovery_templates.py  test_extract_real.py  test_instagram_rules.py  test_llm_integration.py  test_normalizers.py  test_quality_gate.py  test_reporter.py  (+4 more)
(+10 files in other folders)
